feat(api): 添加 Ollama API Python 客户端示例及更新入口文件
- 新增 python-demo/ollama_cloud.py，展示如何使用 Ollama API 进行聊天调用
- 通过环境变量 OLLAMA_API_KEY 进行身份验证
- 更新 package.json，将主入口文件从 ollama_js_example.js 改为 ollama_client.js
- 示例实现了基于 gpt-oss:120b 模型的聊天流式输出功能

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "ollama-api-demo",
   "version": "1.0.0",
   "description": "Demo project showing how to use Ollama API with qwen3:8b model",
-  "main": "ollama_js_example.js",
+  "main": "ollama_client.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
